# polymarket-edge-research

./: .gitignore  README.md  SYNTHESIS.md  config.yaml  pyproject.toml
docs/: COUNTER_MEMO_MM_OPPORTUNITY.md  ELI5.md  FINDINGS.md  MASTER_PLAN.md  NULL_RESULTS.md  OPPORTUNITY_HOURLY_LADDER_MM.md  OPPORTUNITY_SPORTS_EVENT_LAG_ARB.md  PIVOT_BRAINSTORM.md  PLAN_E12_PAPER_TRADE.md  PLAN_E14_PORTFOLIO_BUILDOUT.md  PLAN_FAST_BOT.md  PLAN_HISTORY.md  PROJECT_POSTSCRIPT.md  README.md  RUNBOOK.md  SESSION_2026-04-19.md  WHAT_WORKS_ON_POLYMARKET_BARRIERS.md  healthcheck.sh
experiments/: SYNTHESIS_flb_cross_venue.md
experiments/e10_geo_informed_trading/: DESIGN_LOG.md  FINDINGS.md  MANUAL_REVIEW_RUBRIC.md  README.md  REPORT.md  analyze.py  feeds.yaml  markets.yaml  watcher.py
experiments/e10_regime_stratified_backtest/: RESEARCH_MEMO.md  fetch_resolutions.py
experiments/e11_full_scan/: scan_1776544239.json  scan_all.py
experiments/e11_funding_arb_sensecheck/: README.md  probe.py
experiments/e12_paper_trade/: README.md  config.py  daemon.py  detector.py  gamma_client.py  http_client.py  missed_scanner.py  pause_ctl.py  pre_run.py  report.py  resolver.py  risk.py  schema.sql  shakedown.py  shakedown_report.json  sidecar.py  slug_audit.json  slug_audit.py  sports_feeds.py  trader_client.py  v2_migration.py  v2_watcher.py
experiments/e13_external_repo_audit/: 01_sii_dataset_probe.py  02_sii_fee_realization.py  03_sii_sports_lag_backtest.py  04_sii_crypto_barrier_backtest.py  (+8 more)
probe/: REPORT.md  api.py  db.py  main.py  report.py  status.sh
src/: prices.py  storage.py
(+269 files in other folders)
