[project]
name = "event-impact-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "anthropic>=0.96.0",
    "ccxt>=4.5.49",
    "espn-api>=0.46.0",
    "feedparser>=6.0.12",
    "huggingface-hub>=1.11.0",
    "mlb-statsapi>=1.9.0",
    "nba-api>=1.11.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polymarket-apis>=0.5.7",
    "polymarket-paper-trader>=0.1.7",
    "pyarrow>=23.0.1",
    "pyrate-limiter>=4.1.0",
    "python-binance>=1.0.36",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "websockets>=16.0",
]
